# multilateral_triangulation

./: README.md  TODO.txt  ansible_alias  ansible_playbook_tower.retry  ansible_playbook_tower.yml
CAD/__Previews/: MKR_VIDOR_4000_AssemblyTop (1).dxfPreview
Cpp/: CMakeLists.txt
Cpp/lib/: config.hpp.gch  fpga_interface.hpp  peripherals.h  soc_system.h  soc_system.h.gch  time_controll.hpp  time_controll.hpp.gch  time_sync.hpp  time_sync.hpp.gch
Cpp/mqtt_tcp/: CMakeLists.txt  Makefile  dump  sdkconfig
Cpp/mqtt_tcp/components/fpgainterface/: CMakeLists.txt  component.mk
Cpp/mqtt_tcp/components/fpgainterface/include/: GPIO_trigger.hpp  fpgainterface.hpp  spi_interface.hpp
Cpp/mqtt_tcp/components/fpgainterface/src/: GPIO_trigger.cpp  fpgainterface.cpp  spi_interface.cpp
Cpp/mqtt_tcp/main/: Kconfig.projbuild  app_main.cpp
Cpp/spi_master_test/: sdkconfig.old
Cpp/spi_master_test/main/: CMakeLists.txt  decode_image.cpp  pretty_effect.cpp  spi_master_example_main.cpp
Cpp/src/: fpga_interface.cpp  main.cpp  peripherals.cpp  piezo_ctl.cpp  time_controll.cpp  time_sync.cpp
Cpp/src/triang_mqtt/: CMakeLists.txt
Cpp/src/triang_mqtt/components/fpga-interface/: CMakeLists.txt  fpga-interface.cpp
Cpp/src/triang_mqtt/components/fpga-interface/include/: fpga-interface.hpp
Cpp/src/triang_mqtt/src/: app_main.c
Cpp/triang_mqtt/main/: app_main.c
PCB/: acoustic_levitation_main-cache.lib  acoustic_levitation_main-rescue.lib  acoustic_levitation_main.bak  acoustic_levitation_main.pro  acoustic_levitation_main.sch  piezo.bak  piezo.sch  piezo_x6.bak  piezo_x6.sch
PCB/simulations/: Draft1.asc  Draft2.asc
Quartus/: DE0_Nano_SoC.dpf  DE0_Nano_SoC.qsf  DE0_Nano_SoC.qws  DE0_Nano_SoC_assignment_defaults.qdf  DE0_Nano_SoC_top_level.vhd  clock_divider_hw.tcl  clock_divider_hw.tcl~  id_switch_hw.tcl  make_c_header.sh  new_pin_assigment.tcl  new_pin_thing.csv  piezo_controller_hw.tcl  piezo_controller_hw.tcl~  ptp_simple_us_hw.tcl  ptp_simple_us_hw.tcl~  realtime_clock_controll_hw.tcl  realtime_clock_controll_hw.tcl~  soc_system.qsys  soc_system.sopcinfo  soc_system_old.qsys  to_rbf.cof
Quartus/.qsys_edit/: preferences.xml  soc_system.xml  soc_system_schematic.nlv
Quartus/atom_netlists/: DE0_Nano_SoC.qsf
Quartus/db/: .cmp.kpt  DE0_Nano_SoC.(0).cnf.cdb  DE0_Nano_SoC.(0).cnf.hdb  DE0_Nano_SoC.(1).cnf.cdb  DE0_Nano_SoC.(1).cnf.hdb  DE0_Nano_SoC.(10).cnf.cdb  DE0_Nano_SoC.(10).cnf.hdb  DE0_Nano_SoC.(11).cnf.cdb  DE0_Nano_SoC.(11).cnf.hdb  DE0_Nano_SoC.(12).cnf.cdb  DE0_Nano_SoC.(12).cnf.hdb  DE0_Nano_SoC.(13).cnf.cdb  DE0_Nano_SoC.(13).cnf.hdb  DE0_Nano_SoC.(14).cnf.cdb  DE0_Nano_SoC.(14).cnf.hdb  DE0_Nano_SoC.(15).cnf.cdb  DE0_Nano_SoC.(15).cnf.hdb  DE0_Nano_SoC.(16).cnf.cdb  DE0_Nano_SoC.(16).cnf.hdb  DE0_Nano_SoC.(17).cnf.cdb  DE0_Nano_SoC.(17).cnf.hdb  DE0_Nano_SoC.(18).cnf.cdb  DE0_Nano_SoC.(18).cnf.hdb  DE0_Nano_SoC.(19).cnf.cdb  DE0_Nano_SoC.(19).cnf.hdb  DE0_Nano_SoC.(2).cnf.cdb  DE0_Nano_SoC.(2).cnf.hdb  DE0_Nano_SoC.(20).cnf.cdb  DE0_Nano_SoC.(20).cnf.hdb  DE0_Nano_SoC.(21).cnf.cdb  DE0_Nano_SoC.(22).cnf.cdb  DE0_Nano_SoC.(22).cnf.hdb  DE0_Nano_SoC.(23).cnf.cdb  DE0_Nano_SoC.(23).cnf.hdb  DE0_Nano_SoC.(24).cnf.cdb  DE0_Nano_SoC.(24).cnf.hdb  DE0_Nano_SoC.(25).cnf.cdb  DE0_Nano_SoC.(26).cnf.cdb  DE0_Nano_SoC.(26).cnf.hdb  DE0_Nano_SoC.(27).cnf.cdb  (+178 more)
Quartus/output_files/: DE0_Nano_SoC.asm.rpt  DE0_Nano_SoC.done  DE0_Nano_SoC.eda.rpt  DE0_Nano_SoC.fit.rpt  DE0_Nano_SoC.fit.summary  DE0_Nano_SoC.flow.rpt  DE0_Nano_SoC.jdi  DE0_Nano_SoC.map.rpt  DE0_Nano_SoC.map.smsg  DE0_Nano_SoC.map.summary  DE0_Nano_SoC.pin  DE0_Nano_SoC.sld  DE0_Nano_SoC.sta.summary
Quartus/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.h  soc_system.html  soc_system.xml  soc_system_bb.v  soc_system_generation.rpt  soc_system_generation_previous.rpt  soc_system_inst.v  soc_system_inst.vhd
Quartus/soc_system_old/: soc_system.bsf  soc_system.xml  soc_system_bb.v  soc_system_inst.v  soc_system_inst.vhd
Quartus/testbench/: ptp_tb.qsf  trigger_tb.qpf  trigger_tb.v  trigger_tb_nativelink_simulation.rpt  us_ptp_tb.v
Verilog/: ID_Switch.v  ID_Switch.v.bak  ptp_via_US.v  realtime_clock_controll.v  realtime_clock_controll.v.bak
VidorFPGA/: create_header.sh.save
VidorFPGA/EmptySketch/: app.h
VidorFPGA/Quartus/: MKRVIDOR4000.qsf  MKRVIDOR4000.qws  MKRVIDOR4000_assignment_defaults.qdf  MKRVIDOR4000_top.v
VidorFPGA/ReverseByte_V2/: app.h
VidorFPGA/Sketch_FPGA_PWM/: Sketch_FPGA_PWM.ino
VidorFPGA/test_programm/: SPISlave.v  SPISlave.v.bak  test_programm.qsys  test_programm.sopcinfo
VidorFPGA2/EmptySketch/: EmptySketch.ino
VidorFPGA2/FPGABlinkLED_Sketch/: FPGABlinkLED_Sketch.ino  app.h
catkin/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin/src/triang_rosmaster/: CMakeLists.txt
catkin/src/triang_rosmaster/lib/: common.hpp  master_gen.hpp  master_list.hpp  menu.hpp
catkin/src/triang_rosmaster/src/: main.cpp  master_gen.cpp  master_list.cpp  menu.cpp
catkin/src/triangulation/: CMakeLists.txt  cpy_app-h.sh
catkin/src/triangulation/ReverseByte_V2/: create_header.sh
catkin/src/triangulation/arduino/: arduino.ino  mqtt_test.cpp  mqtt_test.hpp
catkin/src/triangulation/datadump/: fpga_interface.cpp  fpga_interface.hpp  peripherals.cpp  piezo_ctl.cpp  piezo_ctl.hpp  time_controll.cpp  time_controll.hpp  trap.cpp  trap.h
catkin/src/triangulation/hw/: de0.cpp  de0.hpp  interface.hpp  vidor.cpp  vidor.hpp
catkin/src/triangulation/hw/vidor_gen/src/: signature.h
catkin/src/triangulation/lib/: config.hpp  config.hpp.gch  fpga_interface.hpp  mode_ctl.hpp  peripherals.h  piezo_ctl.hpp  soc_system.h  soc_system.h.gch  time_controll.hpp  time_controll.hpp.gch  time_sync.hpp
catkin/src/triangulation/src/: fpga_interface.cpp  main.cpp  mode_ctl.cpp  peripherals.cpp  piezo_ctl.cpp  time_controll.cpp  time_sync.cpp  trap.cpp  vidor.ino
deploy_script/: ansible_playbook.yml  runBin_all_nods.retry  runBin_all_nods.yml
esp82_test/sketch_mar20a/: inputesp.ino  (+1 more)
orga/: kickoff
testbench/: ptp_tb.qpf  trigger_tb.qsf  trigger_tb.qws  trigger_tb.v.bak
(+953 files in other folders)
